Fix alignment

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -53,7 +53,7 @@
     }    
 
     .checkpoint-sidebar-button {
-        margin: 0 4px;
+        margin: 2px 4px;
         padding-right: 16px;
     }
 }
